istio/ingress/bookinfo.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: bookinfo
    app.kubernetes.io/name: bookinfo
  name: bookinfo
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: bookinfo.demo.spic.me
      http:
        paths:
          - backend:
              serviceName: productpage
              servicePort: 9080
            path: /
  tls:
    - hosts:
        - bookinfo.demo.spic.me
      secretName: bookinfo--tls
