istio/ingress/grafana-istio.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-demo
  namespace: istio-system
  labels:
    app: grafana-demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: grafana-istio.demo.nalbam.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
