istio/ingress/grafana.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: grafana
    app.kubernetes.io/name: grafana
  name: grafana
  namespace: istio-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: grafana-istio.closed.mzdev.be
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 3000
            path: /
  tls:
    - hosts:
        - grafana-istio.closed.mzdev.be
      secretName: grafana-mzdev-tls
