istio/ingress/kiali.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: kiali
    app.kubernetes.io/name: kiali
  name: kiali
  namespace: istio-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: kiali-istio.closed.mzdev.be
      http:
        paths:
          - backend:
              serviceName: kiali
              servicePort: 20001
            path: /
  tls:
    - hosts:
        - kiali-istio.closed.mzdev.be
      secretName: kiali-tls
