istio/ingress/tracing-istio.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tracing-demo
  namespace: istio-system
  labels:
    app: tracing-demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: tracing-istio.demo.nalbam.com
    http:
      paths:
      - path: /
        backend:
          serviceName: zipkin
          servicePort: 9411
