istio/ingress/tracing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: tracing
    app.kubernetes.io/name: tracing
  name: tracing
  namespace: istio-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: tracing-istio.demo.spic.me
      http:
        paths:
          - backend:
              serviceName: tracing
              servicePort: 80
            path: /
  tls:
    - hosts:
        - tracing-istio.demo.spic.me
      secretName: tracing-tls
